Add TO Mukund creation

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Ace</title>
+  <title>Mukund Creation</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css">
@@ -39,7 +39,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a href="index.html" class="navbar-brand">
-            <img src="images/logo-black.png" alt="">
+            <img src="img/logo.png" alt="">
           </a>
           <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -91,7 +91,7 @@
     </div>
     <div class="portfolio_container slick-carousel">
       <div class="box">
-        <img src="images/p-1.jpg" alt="">
+        <img src="img/p15.jpg" alt="">
         <div class="link-box">
           <a href="">
             <img src="images/link.png" alt="">
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="images/p-2.jpg" alt="">
+        <img src="img/p29.jpeg" alt="">
         <div class="link-box">
           <a href="">
             <img src="images/link.png" alt="">
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="images/p-3.jpg" alt="">
+        <img src="img/p21.jpeg" alt="">
         <div class="link-box">
           <a href="">
             <img src="images/link.png" alt="">
@@ -146,7 +146,7 @@
       <div class="quality_container">
         <h2>
           Quality <br>
-          your Photo
+          Creation
         </h2>
         <div class="box">
           <div class="detail-box">
@@ -191,7 +191,7 @@
         <div class="col-md-3">
           <div class="info-logo">
             <a href="">
-              <img src="images/info-logo.png" alt="">
+              <img src="img/logo.png" alt="">
             </a>
             <p>
               It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -245,7 +245,7 @@
               <a href="">
                 <img src="images/location.png" alt="">
                 <span>
-                  Loram ipusm New York, NY 36524
+                  Hadapser, Pune, Maharashtra, India
                 </span>
               </a>
             </div>
@@ -256,7 +256,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  ( +01 1234567890 )
+                  ( +91 9168088812 )
                 </span>
               </a>
             </div>
@@ -339,10 +339,10 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a><br>
+      &copy; 2023 All Rights Reserved By
+      <a href="https://html.design/">Mukund Creation</a><br>
       Distributed By
-      <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+      <a href="https://themewagon.com/" target="_blank">Mukund Creation</a>
     </p>
   </section>
   <!-- footer section -->
