--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Ace</title>
+  <title>Mukund Creation</title>
 
 
 
@@ -39,7 +39,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a href="index.html" class="navbar-brand">
-            <img src="images/logo-black.png" alt="">
+            <img src="img/logo.png" alt="">
           </a>
           <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -82,15 +82,15 @@
       <div class="box">
         <div class="img_container">
           <div class="img-box b1">
-            <img src="images/a-1.jpg" alt="">
+            <img src="img/p18.jpeg" alt="">
           </div>
           <div class="img-box b2">
-            <img src="images/a-2.jpg" alt="">
+            <img src="img/p19.webp" alt="">
           </div>
         </div>
         <div class="detail-box">
           <h2>
-            About Our Studio
+            About Our Creation
           </h2>
           <p>
             There are many variations of passages of Lorem Ipsum
@@ -113,7 +113,7 @@
         <div class="col-md-3">
           <div class="info-logo">
             <a href="">
-              <img src="images/info-logo.png" alt="">
+              <img src="img/logo.png" alt="">
             </a>
             <p>
               It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -167,7 +167,7 @@
               <a href="">
                 <img src="images/location.png" alt="">
                 <span>
-                  Loram ipusm New York, NY 36524
+                  Hadapser, Pune, Maharashtra, India
                 </span>
               </a>
             </div>
@@ -178,7 +178,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  ( +01 1234567890 )
+                  ( +91 9168088812 )
                 </span>
               </a>
             </div>
@@ -261,10 +261,10 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a><br>
+      &copy; 2023 All Rights Reserved By
+      <a href="#">Mukund Creation</a><br>
       Distributed By
-      <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+      <a href="#" target="_blank">Mukund Creation</a>
     </p>
   </section>
   <!-- footer section -->
