--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Ace</title>
+  <title>Mukund Creation</title>
 
 
 
@@ -41,7 +41,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a href="index.html" class="navbar-brand">
-            <img src="images/logo-black.png" alt="">
+            <img src="img/logo.png" alt="">
           </a>
           <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -113,12 +113,11 @@
         </div>
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/contact-img.png" alt="">
+            <img src="img/p16.jpeg" alt="">
             <div class="img_overlay">
               <h2>
                 Best <br>
-                Photo <br>
-                studio
+                Creation <br>
               </h2>
               <a href="">
                 Contact Us
@@ -139,7 +138,7 @@
         <div class="col-md-3">
           <div class="info-logo">
             <a href="">
-              <img src="images/info-logo.png" alt="">
+              <img src="img/logo.png" alt="">
             </a>
             <p>
               It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -193,7 +192,7 @@
               <a href="">
                 <img src="images/location.png" alt="">
                 <span>
-                  Loram ipusm New York, NY 36524
+                  Hadapser, Pune, Maharashtra, India
                 </span>
               </a>
             </div>
@@ -204,7 +203,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  ( +01 1234567890 )
+                  ( +91 9168088812 )
                 </span>
               </a>
             </div>
@@ -287,10 +286,10 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a><br>
+      &copy; 2023 All Rights Reserved By
+      <a href="#">Mukund Creation</a><br>
       Distributed By
-      <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+      <a href="#" target="_blank">Mukund Creation</a>
     </p>
   </section>
   <!-- footer section -->
